// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title renders correctly 1`] = `
<View
  style={
    {
      "alignItems": "flex-start",
      "flexDirection": "row",
      "flexWrap": "nowrap",
      "justifyContent": "space-between",
      "marginBottom": 7,
    }
  }
>
  <Text
    ellipsizeMode="tail"
    style={
      [
        {
          "color": "#181818",
          "fontSize": 26,
          "fontWeight": "700",
          "lineHeight": 28,
        },
        [
          {
            "flexBasis": "100%",
          },
          {
            "color": "#181818",
          },
          undefined,
        ],
      ]
    }
  >
    Movie title
  </Text>
</View>
`;

exports[`Title renders correctly with aside 1`] = `
<View
  style={
    {
      "alignItems": "flex-start",
      "flexDirection": "row",
      "flexWrap": "nowrap",
      "justifyContent": "space-between",
      "marginBottom": 7,
    }
  }
>
  <Text
    ellipsizeMode="tail"
    style={
      [
        {
          "color": "#181818",
          "fontSize": 26,
          "fontWeight": "700",
          "lineHeight": 28,
        },
        [
          {
            "flexBasis": 635,
          },
          {
            "color": "#181818",
          },
          undefined,
        ],
      ]
    }
  >
    Movie title
  </Text>
  <Text>
    Aside
  </Text>
</View>
`;
